automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container amiable">
       
       <div class="column">
+        <p>This is a sentence in a paragraph tag.</p>
         <img class="small" src="./images/bay_of_pigs.jpg">
         <img class="small" src="./images/augustus_gloop.jpg">
         <img class="small" src="./images/cherub.jpg">
