automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
       
       <div class="column">
+        <p>this is another sentence.</p>
         <img class="med" src="./images/galaxy_note.jpg">
         <img class="small" src="./images/leggo_my_eggo.jpg">
       </div>
